--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,4 @@ GitHub.sublime-settings
 !.vscode/extensions.json
 .history
 apps/templates_app/migrations/0001_initial.py
+apps/templates_app/migrations/0002_category_description_category_slug_and_more.py
