add a theme dark mode

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ __pycache__
 db.sqlite3
 media
 
+static/
+
 # Backup files #
 *.bak
 
@@ -134,3 +136,4 @@ apps/accounts/migrations/0002_profile_github_token.py
 apps/accounts/migrations/
 .gitignore
 apps/templates_app/migrations/0003_template_template_dir_alter_template_file.py
+templates/footer_ot.html
